# pathlight

./: .env.example  .gitignore  LICENSE  MIGRATIONS_README.md  README.md  docker-compose.yml  docker_manager.sh  requirements.txt  setup-env.sh  start_all.sh
.github/workflows/: agentic-service.yml  auth-service.yml  frontend-build.yml  user-service.yml
auth_service/: .env.example
auth_service/tests/: test_auth.py
docs/: docs.md  frontend.md  libs.md  services.md
frontend/: .env.example  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
libs/common-types-py/: shared_models.py
libs/common-utils-py/: pyproject.toml
libs/common-utils-py/src/pathlight_common/: __init__.py  alembic_env.py  config.py
libs/common-utils-py/utils/: config.py
libs/gamification/: README.md
libs/models/: README.md
libs/skill_graph/: README.md
libs/ui/: README.md
scripts/sql/: create_elearning_schema.sql
services/: README.md  docker-compose.yml  docker-manager.sh  run_all.sh  test_all_services.sh
services/agentic-service/: .env.example  CONFIGURATION.md  Dockerfile  Makefile  README.md  deploy-lambda.sh  pyproject.toml  pytest.ini  requirements.txt  setup-env.sh  setup.cfg  test-requirements.txt
services/api-gateway/: Dockerfile  docker-manager.sh  pyproject.toml  requirements.txt
services/api-gateway/src/: config.py  main.py  middleware.py
services/auth/: Dockerfile  pyproject.toml
services/auth-service/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  auth.db  deploy-lambda.sh  docker-compose.yml  docker-manager.sh  pyproject.toml  pytest.ini  requirements.txt  test-requirements.txt
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 001_create_admin_table.py
services/auth-service/src/: config.py  database.py  email_reminders.py  main.py  models.py
services/auth-service/src/controllers/: auth_controller.py
services/auth-service/src/routes/: auth_routes.py
services/auth-service/src/schemas/: auth_schemas.py
services/auth-service/src/services/: auth_service.py  email_reminders.py  email_service.py
services/auth-service/tests/: conftest.py  test_auth_routes.py  test_business_logic.py  test_health.py  test_main.py  test_services.py  test_smtp_email.py
services/auth/alembic/: env.py
services/auth/src/core/: database.py  settings.py
services/auth/src/crud/: user.py
services/auth/src/models/: user.py
services/auth/src/routers/: users.py
services/auth/src/schemas/: user.py
services/course-service/: .env.example  .gitignore  Dockerfile  alembic.ini  course.db  docker-manager.sh  pyproject.toml  requirements.txt
services/quiz-service/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-manager.sh  pyproject.toml  quiz.db  requirements.txt
services/user-service/: .env.example  .gitignore  Dockerfile  README.md  TEST_SUMMARY.md  alembic.ini  pyproject.toml  (+6 more)
(+192 files in other folders)
