[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common-utils-py"
version = "0.1.0"
description = "Common utilities for PathLight services"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/common_utils_py"]
