[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auth-service"
version = "0.1.0" 
description = "Authentication service for PathLight"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.1.0",
    "PyJWT>=2.8.0",
    "aiosmtplib>=3.0.0",
    "email-validator>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "APScheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
