[project]
name = "auth_service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncpg",
    "sqlalchemy>=2",
    "alembic",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "pydantic>=2",
    "python-dotenv",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "httpx"]

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
